Fix: end-of-content margin padding
This broke because I attached the scrollbar to the body.

--- a/src/styles/views/app/_app_base.css
+++ b/src/styles/views/app/_app_base.css
@@ -75,6 +75,6 @@ html {
   overflow       : visible;
 }
 /* Should always scroll past content */
-.main__body-content > :last-child {
+.main__body-content > :last-child > :last-child {
   margin-bottom: 333px;
 }
